@@ -1,5 +1,9 @@
 2008-05-28  Neal H. Walfield  <neal@gnu.org>
 
+	* pager.c (pager_collect): Correctly parenthesize the use of <<.
+
+2008-05-28  Neal H. Walfield  <neal@gnu.org>
+
 	* pager.c (pager_collect): Don't just consider the first-level
 	activities, walk the activity hierarchy to find the victim.
 
